--- a/modelling.ipynb
+++ b/modelling.ipynb
@@ -3,172 +3,445 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "vscode": {
-     "languageId": "plaintext"
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/Users/ismatsamadov/Sales_Forecasting/.venv/lib/python3.12/site-packages/sklearn/metrics/_regression.py:492: FutureWarning: 'squared' is deprecated in version 1.4 and will be removed in 1.6. To calculate the root mean squared error, use the function'root_mean_squared_error'.\n",
+      "  warnings.warn(\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Iteration 100, RMSE: 7.190855832988641\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/Users/ismatsamadov/Sales_Forecasting/.venv/lib/python3.12/site-packages/sklearn/metrics/_regression.py:492: FutureWarning: 'squared' is deprecated in version 1.4 and will be removed in 1.6. To calculate the root mean squared error, use the function'root_mean_squared_error'.\n",
+      "  warnings.warn(\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Iteration 200, RMSE: 7.124879354815004\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/Users/ismatsamadov/Sales_Forecasting/.venv/lib/python3.12/site-packages/sklearn/metrics/_regression.py:492: FutureWarning: 'squared' is deprecated in version 1.4 and will be removed in 1.6. To calculate the root mean squared error, use the function'root_mean_squared_error'.\n",
+      "  warnings.warn(\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Iteration 300, RMSE: 7.070183142329786\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/Users/ismatsamadov/Sales_Forecasting/.venv/lib/python3.12/site-packages/sklearn/metrics/_regression.py:492: FutureWarning: 'squared' is deprecated in version 1.4 and will be removed in 1.6. To calculate the root mean squared error, use the function'root_mean_squared_error'.\n",
+      "  warnings.warn(\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Iteration 400, RMSE: 7.052207008701971\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/Users/ismatsamadov/Sales_Forecasting/.venv/lib/python3.12/site-packages/sklearn/metrics/_regression.py:492: FutureWarning: 'squared' is deprecated in version 1.4 and will be removed in 1.6. To calculate the root mean squared error, use the function'root_mean_squared_error'.\n",
+      "  warnings.warn(\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Iteration 500, RMSE: 7.037124658818531\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/Users/ismatsamadov/Sales_Forecasting/.venv/lib/python3.12/site-packages/sklearn/metrics/_regression.py:492: FutureWarning: 'squared' is deprecated in version 1.4 and will be removed in 1.6. To calculate the root mean squared error, use the function'root_mean_squared_error'.\n",
+      "  warnings.warn(\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Iteration 600, RMSE: 7.017110386846833\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/Users/ismatsamadov/Sales_Forecasting/.venv/lib/python3.12/site-packages/sklearn/metrics/_regression.py:492: FutureWarning: 'squared' is deprecated in version 1.4 and will be removed in 1.6. To calculate the root mean squared error, use the function'root_mean_squared_error'.\n",
+      "  warnings.warn(\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Iteration 700, RMSE: 7.006887754421144\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/Users/ismatsamadov/Sales_Forecasting/.venv/lib/python3.12/site-packages/sklearn/metrics/_regression.py:492: FutureWarning: 'squared' is deprecated in version 1.4 and will be removed in 1.6. To calculate the root mean squared error, use the function'root_mean_squared_error'.\n",
+      "  warnings.warn(\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Iteration 800, RMSE: 6.9897382744045755\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/Users/ismatsamadov/Sales_Forecasting/.venv/lib/python3.12/site-packages/sklearn/metrics/_regression.py:492: FutureWarning: 'squared' is deprecated in version 1.4 and will be removed in 1.6. To calculate the root mean squared error, use the function'root_mean_squared_error'.\n",
+      "  warnings.warn(\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Iteration 900, RMSE: 6.991189566420495\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/Users/ismatsamadov/Sales_Forecasting/.venv/lib/python3.12/site-packages/sklearn/metrics/_regression.py:492: FutureWarning: 'squared' is deprecated in version 1.4 and will be removed in 1.6. To calculate the root mean squared error, use the function'root_mean_squared_error'.\n",
+      "  warnings.warn(\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Iteration 1000, RMSE: 6.976424783327039\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/Users/ismatsamadov/Sales_Forecasting/.venv/lib/python3.12/site-packages/sklearn/metrics/_regression.py:492: FutureWarning: 'squared' is deprecated in version 1.4 and will be removed in 1.6. To calculate the root mean squared error, use the function'root_mean_squared_error'.\n",
+      "  warnings.warn(\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Iteration 100, RMSE: 6.617637036411876\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/Users/ismatsamadov/Sales_Forecasting/.venv/lib/python3.12/site-packages/sklearn/metrics/_regression.py:492: FutureWarning: 'squared' is deprecated in version 1.4 and will be removed in 1.6. To calculate the root mean squared error, use the function'root_mean_squared_error'.\n",
+      "  warnings.warn(\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Iteration 200, RMSE: 6.431912865853129\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/Users/ismatsamadov/Sales_Forecasting/.venv/lib/python3.12/site-packages/sklearn/metrics/_regression.py:492: FutureWarning: 'squared' is deprecated in version 1.4 and will be removed in 1.6. To calculate the root mean squared error, use the function'root_mean_squared_error'.\n",
+      "  warnings.warn(\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Iteration 300, RMSE: 6.29515768465591\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/Users/ismatsamadov/Sales_Forecasting/.venv/lib/python3.12/site-packages/sklearn/metrics/_regression.py:492: FutureWarning: 'squared' is deprecated in version 1.4 and will be removed in 1.6. To calculate the root mean squared error, use the function'root_mean_squared_error'.\n",
+      "  warnings.warn(\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Iteration 400, RMSE: 6.215969746199262\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/Users/ismatsamadov/Sales_Forecasting/.venv/lib/python3.12/site-packages/sklearn/metrics/_regression.py:492: FutureWarning: 'squared' is deprecated in version 1.4 and will be removed in 1.6. To calculate the root mean squared error, use the function'root_mean_squared_error'.\n",
+      "  warnings.warn(\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Iteration 500, RMSE: 6.187053403147396\n"
+     ]
     }
-   },
+   ],
+   "source": [
+    "import pandas as pd\n",
+    "import numpy as np\n",
+    "from sklearn.model_selection import TimeSeriesSplit\n",
+    "import xgboost as xgb\n",
+    "from sklearn.metrics import mean_squared_error\n",
+    "import joblib\n",
+    "\n",
+    "# Load the data from the specified 'data/' directory\n",
+    "item_categories = pd.read_csv('data/item_categories.csv')\n",
+    "items = pd.read_csv('data/items.csv')\n",
+    "sales_train = pd.read_csv('data/sales_train.csv')\n",
+    "shops = pd.read_csv('data/shops.csv')\n",
+    "test = pd.read_csv('data/test.csv')\n",
+    "\n",
+    "# Convert the 'date' column to datetime\n",
+    "sales_train['date'] = pd.to_datetime(sales_train['date'], format='%d.%m.%Y')\n",
+    "\n",
+    "# Aggregate the sales data by month, shop, and item\n",
+    "monthly_sales = sales_train.groupby(['date_block_num', 'shop_id', 'item_id'], as_index=False).agg({\n",
+    "    'item_cnt_day': 'sum',\n",
+    "    'item_price': 'mean'\n",
+    "}).rename(columns={'item_cnt_day': 'item_cnt_month'})\n",
+    "\n",
+    "# Merging with items, shops, and item categories for feature enrichment\n",
+    "monthly_sales = monthly_sales.merge(items[['item_id', 'item_category_id']], on='item_id', how='left')\n",
+    "monthly_sales = monthly_sales.merge(shops[['shop_id', 'shop_name']], on='shop_id', how='left')\n",
+    "monthly_sales = monthly_sales.merge(item_categories[['item_category_id', 'item_category_name']], on='item_category_id', how='left')\n",
+    "\n",
+    "# Creating lag features to improve predictive power\n",
+    "for lag in [1, 2, 3]:\n",
+    "    lag_col_name = f'item_cnt_month_lag_{lag}'\n",
+    "    monthly_sales[lag_col_name] = monthly_sales.groupby(['shop_id', 'item_id'])['item_cnt_month'].shift(lag)\n",
+    "\n",
+    "# Fill missing lag values with 0 (no sales)\n",
+    "monthly_sales.fillna(0, inplace=True)\n",
+    "\n",
+    "# Drop columns not needed for modeling\n",
+    "X = monthly_sales.drop(['item_cnt_month', 'shop_name', 'item_category_name'], axis=1)\n",
+    "y = monthly_sales['item_cnt_month']\n",
+    "\n",
+    "# Time series split for cross-validation\n",
+    "tscv = TimeSeriesSplit(n_splits=3)\n",
+    "\n",
+    "# Initializing XGBoost with hyperparameters\n",
+    "xgb_model = xgb.XGBRegressor(\n",
+    "    max_depth=8,\n",
+    "    n_estimators=1000,\n",
+    "    min_child_weight=300,\n",
+    "    colsample_bytree=0.8,\n",
+    "    subsample=0.8,\n",
+    "    eta=0.3,\n",
+    "    seed=42\n",
+    ")\n",
+    "\n",
+    "# Custom early stopping\n",
+    "best_rmse = float('inf')\n",
+    "n_rounds_no_improve = 0\n",
+    "early_stopping_rounds = 10\n",
+    "eval_metric = 'rmse'\n",
+    "\n",
+    "# Time-based cross-validation\n",
+    "for train_index, test_index in tscv.split(X):\n",
+    "    X_train, X_valid = X.iloc[train_index], X.iloc[test_index]\n",
+    "    y_train, y_valid = y.iloc[train_index], y.iloc[test_index]\n",
+    "    \n",
+    "    eval_set = [(X_train, y_train), (X_valid, y_valid)]\n",
+    "    \n",
+    "    # Train the model in steps to implement early stopping manually\n",
+    "    for i in range(100, 1001, 100):\n",
+    "        xgb_model.n_estimators = i\n",
+    "        xgb_model.fit(X_train, y_train, eval_set=eval_set, verbose=False)\n",
+    "        \n",
+    "        # Predict on validation set and calculate RMSE\n",
+    "        y_pred = xgb_model.predict(X_valid)\n",
+    "        rmse = mean_squared_error(y_valid, y_pred, squared=False)\n",
+    "        \n",
+    "        print(f\"Iteration {i}, RMSE: {rmse}\")\n",
+    "        \n",
+    "        # Check for early stopping\n",
+    "        if rmse < best_rmse:\n",
+    "            best_rmse = rmse\n",
+    "            n_rounds_no_improve = 0\n",
+    "        else:\n",
+    "            n_rounds_no_improve += 1\n",
+    "        \n",
+    "        if n_rounds_no_improve >= early_stopping_rounds:\n",
+    "            print(f\"Early stopping at iteration {i}, best RMSE: {best_rmse}\")\n",
+    "            break\n",
+    "\n",
+    "# Save the trained model for deployment\n",
+    "joblib.dump(xgb_model, 'sales_prediction_model.joblib')\n",
+    "print(\"Model saved as 'sales_prediction_model.joblib'\")\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
    "outputs": [],
    "source": []
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "vscode": {
-     "languageId": "plaintext"
-    }
-   },
+   "metadata": {},
    "outputs": [],
    "source": []
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "vscode": {
-     "languageId": "plaintext"
-    }
-   },
+   "metadata": {},
    "outputs": [],
    "source": []
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "vscode": {
-     "languageId": "plaintext"
-    }
-   },
+   "metadata": {},
    "outputs": [],
    "source": []
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "vscode": {
-     "languageId": "plaintext"
-    }
-   },
+   "metadata": {},
    "outputs": [],
    "source": []
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "vscode": {
-     "languageId": "plaintext"
-    }
-   },
+   "metadata": {},
    "outputs": [],
    "source": []
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "vscode": {
-     "languageId": "plaintext"
-    }
-   },
+   "metadata": {},
    "outputs": [],
    "source": []
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "vscode": {
-     "languageId": "plaintext"
-    }
-   },
+   "metadata": {},
    "outputs": [],
    "source": []
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "vscode": {
-     "languageId": "plaintext"
-    }
-   },
+   "metadata": {},
    "outputs": [],
    "source": []
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "vscode": {
-     "languageId": "plaintext"
-    }
-   },
+   "metadata": {},
    "outputs": [],
    "source": []
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "vscode": {
-     "languageId": "plaintext"
-    }
-   },
+   "metadata": {},
    "outputs": [],
    "source": []
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "vscode": {
-     "languageId": "plaintext"
-    }
-   },
+   "metadata": {},
    "outputs": [],
    "source": []
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "vscode": {
-     "languageId": "plaintext"
-    }
-   },
+   "metadata": {},
    "outputs": [],
    "source": []
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "vscode": {
-     "languageId": "plaintext"
-    }
-   },
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "vscode": {
-     "languageId": "plaintext"
-    }
-   },
+   "metadata": {},
    "outputs": [],
    "source": []
   }
  ],
  "metadata": {
+  "kernelspec": {
+   "display_name": ".venv",
+   "language": "python",
+   "name": "python3"
+  },
   "language_info": {
-   "name": "python"
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.12.7"
   }
  },
  "nbformat": 4,
