--- a/modelling.ipynb
+++ b/modelling.ipynb
@@ -9,9 +9,32 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Iteration 100, RMSE: 7.190855832988641\n",
-      "Iteration 200, RMSE: 7.124879354815004\n",
-      "Iteration 300, RMSE: 7.070183142329786\n"
+      "Iteration 100, RMSE: 7.1848291183281585\n",
+      "Iteration 200, RMSE: 7.106073813919705\n",
+      "Iteration 300, RMSE: 7.078943216794538\n",
+      "Iteration 400, RMSE: 7.077612008803284\n",
+      "Iteration 500, RMSE: 7.063316694259713\n",
+      "Iteration 600, RMSE: 7.028641237097448\n",
+      "Iteration 700, RMSE: 7.023183553131436\n",
+      "Iteration 800, RMSE: 7.014067946706754\n",
+      "Iteration 900, RMSE: 6.996755496903188\n",
+      "Iteration 1000, RMSE: 6.987927300791501\n",
+      "Iteration 100, RMSE: 6.6938034328061855\n",
+      "Iteration 200, RMSE: 6.588458966157487\n",
+      "Iteration 300, RMSE: 6.478139475314307\n",
+      "Iteration 400, RMSE: 6.391835488039032\n",
+      "Iteration 500, RMSE: 6.353899438232068\n",
+      "Iteration 600, RMSE: 6.328822181178576\n",
+      "Iteration 700, RMSE: 6.287663648810917\n",
+      "Iteration 800, RMSE: 6.269253826613957\n",
+      "Iteration 900, RMSE: 6.255156840409776\n",
+      "Iteration 1000, RMSE: 6.2341113530857415\n",
+      "Iteration 100, RMSE: 8.703564259880254\n",
+      "Iteration 200, RMSE: 8.601213635657343\n",
+      "Iteration 300, RMSE: 8.569869397619078\n",
+      "Iteration 400, RMSE: 8.55823351715245\n",
+      "Iteration 500, RMSE: 8.535675589407777\n",
+      "Iteration 600, RMSE: 8.531253289150316\n"
      ]
     }
    ],
@@ -25,7 +48,6 @@
     "import warnings\n",
     "warnings.filterwarnings('ignore') \n",
     "\n",
-    "    \n",
     "# Load the data from the specified 'data/' directory\n",
     "item_categories = pd.read_csv('data/item_categories.csv')\n",
     "items = pd.read_csv('data/items.csv')\n",
@@ -55,8 +77,8 @@
     "# Fill missing lag values with 0 (no sales)\n",
     "monthly_sales.fillna(0, inplace=True)\n",
     "\n",
-    "# Drop columns not needed for modeling\n",
-    "X = monthly_sales.drop(['item_cnt_month', 'shop_name', 'item_category_name'], axis=1)\n",
+    "# Drop columns not needed for modeling, including 'date_block_num'\n",
+    "X = monthly_sales.drop(['item_cnt_month', 'shop_name', 'item_category_name', 'date_block_num'], axis=1)\n",
     "y = monthly_sales['item_cnt_month']\n",
     "\n",
     "# Time series split for cross-validation\n",
@@ -70,7 +92,8 @@
     "    colsample_bytree=0.8,\n",
     "    subsample=0.8,\n",
     "    eta=0.3,\n",
-    "    seed=42\n",
+    "    seed=42,\n",
+    "    verbose=0\n",
     ")\n",
     "\n",
     "# Custom early stopping\n",
