--- a/modelling.ipynb
+++ b/modelling.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -30,7 +30,17 @@
       "Iteration 900, RMSE: 6.255156840409776\n",
       "Iteration 1000, RMSE: 6.2341113530857415\n",
       "Iteration 100, RMSE: 8.703564259880254\n",
-      "Iteration 200, RMSE: 8.601213635657343\n"
+      "Iteration 200, RMSE: 8.601213635657343\n",
+      "Iteration 300, RMSE: 8.569869397619078\n",
+      "Iteration 400, RMSE: 8.55823351715245\n",
+      "Iteration 500, RMSE: 8.535675589407777\n",
+      "Iteration 600, RMSE: 8.531253289150316\n",
+      "Iteration 700, RMSE: 8.54144634838019\n",
+      "Iteration 800, RMSE: 8.554663431539181\n",
+      "Iteration 900, RMSE: 8.573241466218883\n",
+      "Iteration 1000, RMSE: 8.574536461323738\n",
+      "Early stopping at iteration 1000, best RMSE: 6.2341113530857415\n",
+      "Model saved as 'sales_prediction_model.joblib'\n"
      ]
     }
    ],
