--- a/modelling.ipynb
+++ b/modelling.ipynb
@@ -146,10 +146,58 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Data saved to 'data/processed_sales.pkl'\n"
+     ]
+    }
+   ],
+   "source": [
+    "import pandas as pd\n",
+    "import joblib\n",
+    "\n",
+    "# Load necessary datasets\n",
+    "items = pd.read_csv('data/items.csv')  # Load items data\n",
+    "sales_train = pd.read_csv('data/sales_train.csv')\n",
+    "sales_train['date'] = pd.to_datetime(sales_train['date'], format='%d.%m.%Y')\n",
+    "\n",
+    "# Aggregate the sales data by month, shop, and item\n",
+    "monthly_sales = sales_train.groupby(['date_block_num', 'shop_id', 'item_id'], as_index=False).agg({\n",
+    "    'item_cnt_day': 'sum',\n",
+    "    'item_price': 'mean'\n",
+    "}).rename(columns={'item_cnt_day': 'item_cnt_month'})\n",
+    "\n",
+    "# Merge item categories\n",
+    "monthly_sales = monthly_sales.merge(items[['item_id', 'item_category_id']], on='item_id', how='left')\n",
+    "\n",
+    "# Create lag features\n",
+    "for lag in [1, 2, 3]:\n",
+    "    lag_col_name = f'item_cnt_month_lag_{lag}'\n",
+    "    monthly_sales[lag_col_name] = monthly_sales.groupby(['shop_id', 'item_id'])['item_cnt_month'].shift(lag)\n",
+    "\n",
+    "# Fill missing values with 0\n",
+    "monthly_sales.fillna(0, inplace=True)\n",
+    "\n",
+    "# Optimize memory usage\n",
+    "monthly_sales = monthly_sales.astype({\n",
+    "    'shop_id': 'int16',\n",
+    "    'item_id': 'int32',\n",
+    "    'item_price': 'float32',\n",
+    "    'item_cnt_month': 'float32',\n",
+    "    'item_cnt_month_lag_1': 'float32',\n",
+    "    'item_cnt_month_lag_2': 'float32',\n",
+    "    'item_cnt_month_lag_3': 'float32',\n",
+    "})\n",
+    "\n",
+    "# Save the processed data to a pickle file\n",
+    "joblib.dump(monthly_sales, 'data/processed_sales.pkl')\n",
+    "print(\"Data saved to 'data/processed_sales.pkl'\")\n"
+   ]
   },
   {
    "cell_type": "code",
