--- a/modelling.ipynb
+++ b/modelling.ipynb
@@ -2,108 +2,234 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Linear Regression:\n",
-      "RMSE: 0.005187915357340992\n",
-      "R-squared: 0.9999916063331278\n",
-      "\n",
-      "Decision Tree:\n",
-      "RMSE: 0.7295054064508728\n",
-      "R-squared: 0.8340325218394546\n",
-      "\n",
-      "Random Forest:\n",
-      "RMSE: 0.7121855230914278\n",
-      "R-squared: 0.841819753495406\n",
-      "\n",
-      "XGBoost:\n",
-      "RMSE: 0.7786799676398508\n",
-      "R-squared: 0.8109032913868871\n"
+      "Linear Regression: RMSE = 0.8039139882505983, R^2 = 0.9293120576622209\n",
+      "Decision Tree: RMSE = 3.2531526078706373e-14, R^2 = 1.0\n",
+      "Random Forest: RMSE = 0.0032960178861133876, R^2 = 0.9999988117569347\n",
+      "XGBoost: RMSE = 0.0001283576835521317, R^2 = 0.9999999981979373\n"
      ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "array([0.16687323, 0.39581677, 0.02217262, ..., 0.918934  , 0.05432508,\n",
-       "       0.21571656], dtype=float32)"
-      ]
-     },
-     "execution_count": 5,
-     "metadata": {},
-     "output_type": "execute_result"
     }
    ],
    "source": [
-    "# Importing necessary libraries\n",
     "import pandas as pd\n",
     "import numpy as np\n",
     "from sklearn.model_selection import train_test_split\n",
-    "from sklearn.preprocessing import LabelEncoder\n",
     "from sklearn.linear_model import LinearRegression\n",
     "from sklearn.tree import DecisionTreeRegressor\n",
     "from sklearn.ensemble import RandomForestRegressor\n",
     "from xgboost import XGBRegressor\n",
     "from sklearn.metrics import mean_squared_error, r2_score\n",
     "\n",
-    "# Load the dataset\n",
-    "df = pd.read_csv('data/vgsales.csv')\n",
+    "# Step 1: Load the Dataset\n",
+    "df = pd.read_excel('data/Coffee Shop Sales.xlsx')\n",
     "\n",
-    "# Data Preprocessing\n",
-    "# Fill missing values in 'Year' with the median year\n",
-    "df['Year'] = df['Year'].fillna(df['Year'].median())\n",
+    "# Step 2: Data Preprocessing\n",
+    "# Calculate Total Sales as (transaction_qty * unit_price)\n",
+    "df['Total Sales'] = df['transaction_qty'] * df['unit_price']\n",
     "\n",
-    "# Encoding categorical variables like 'Platform', 'Genre', and 'Publisher'\n",
-    "label_encoders = {}\n",
-    "for column in ['Platform', 'Genre', 'Publisher']:\n",
-    "    le = LabelEncoder()\n",
-    "    df[column] = le.fit_transform(df[column].astype(str))\n",
-    "    label_encoders[column] = le\n",
+    "# Drop any unnecessary columns\n",
+    "df = df.drop(['transaction_id', 'transaction_date', 'transaction_time', 'product_detail'], axis=1)\n",
     "\n",
-    "# Defining the feature set and the target variable\n",
-    "X = df[['Platform', 'Year', 'Genre', 'NA_Sales', 'EU_Sales', 'JP_Sales', 'Other_Sales']]\n",
-    "y = df['Global_Sales']\n",
+    "# Convert categorical variables into dummy/indicator variables\n",
+    "df = pd.get_dummies(df, drop_first=True)\n",
     "\n",
-    "# Splitting the data into training and test sets\n",
-    "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.3, random_state=42)\n",
+    "# Define feature set X and target y\n",
+    "X = df.drop(['Total Sales'], axis=1)  # Features\n",
+    "y = df['Total Sales']  # Target\n",
     "\n",
-    "# Function to evaluate models\n",
-    "def evaluate_model(model, X_test, y_test):\n",
-    "    y_pred = model.predict(X_test)\n",
-    "    mse = mean_squared_error(y_test, y_pred)\n",
-    "    rmse = np.sqrt(mse)\n",
-    "    r2 = r2_score(y_test, y_pred)\n",
-    "    print(f\"RMSE: {rmse}\")\n",
-    "    print(f\"R-squared: {r2}\")\n",
-    "    return y_pred\n",
+    "# Split the dataset into training and testing sets\n",
+    "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.2, random_state=42)\n",
     "\n",
-    "# 1. Linear Regression\n",
-    "print(\"Linear Regression:\")\n",
-    "lr = LinearRegression()\n",
-    "lr.fit(X_train, y_train)\n",
-    "evaluate_model(lr, X_test, y_test)\n",
+    "# Step 3: Model Training and Evaluation\n",
     "\n",
-    "# 2. Decision Tree\n",
-    "print(\"\\nDecision Tree:\")\n",
-    "dt = DecisionTreeRegressor(random_state=42)\n",
-    "dt.fit(X_train, y_train)\n",
-    "evaluate_model(dt, X_test, y_test)\n",
+    "# Dictionary to store RMSE and R-squared for each model\n",
+    "model_results = {}\n",
     "\n",
-    "# 3. Random Forest\n",
-    "print(\"\\nRandom Forest:\")\n",
-    "rf = RandomForestRegressor(n_estimators=100, random_state=42)\n",
-    "rf.fit(X_train, y_train)\n",
-    "evaluate_model(rf, X_test, y_test)\n",
+    "# Linear Regression\n",
+    "lr_model = LinearRegression()\n",
+    "lr_model.fit(X_train, y_train)\n",
+    "y_pred_lr = lr_model.predict(X_test)\n",
+    "rmse_lr = np.sqrt(mean_squared_error(y_test, y_pred_lr))\n",
+    "r2_lr = r2_score(y_test, y_pred_lr)\n",
+    "model_results['Linear Regression'] = {'RMSE': rmse_lr, 'R^2': r2_lr}\n",
     "\n",
-    "# 4. XGBoost\n",
-    "print(\"\\nXGBoost:\")\n",
-    "xgb = XGBRegressor(n_estimators=100, random_state=42)\n",
-    "xgb.fit(X_train, y_train)\n",
-    "evaluate_model(xgb, X_test, y_test)\n"
+    "# Decision Tree\n",
+    "dt_model = DecisionTreeRegressor()\n",
+    "dt_model.fit(X_train, y_train)\n",
+    "y_pred_dt = dt_model.predict(X_test)\n",
+    "rmse_dt = np.sqrt(mean_squared_error(y_test, y_pred_dt))\n",
+    "r2_dt = r2_score(y_test, y_pred_dt)\n",
+    "model_results['Decision Tree'] = {'RMSE': rmse_dt, 'R^2': r2_dt}\n",
+    "\n",
+    "# Random Forest\n",
+    "rf_model = RandomForestRegressor()\n",
+    "rf_model.fit(X_train, y_train)\n",
+    "y_pred_rf = rf_model.predict(X_test)\n",
+    "rmse_rf = np.sqrt(mean_squared_error(y_test, y_pred_rf))\n",
+    "r2_rf = r2_score(y_test, y_pred_rf)\n",
+    "model_results['Random Forest'] = {'RMSE': rmse_rf, 'R^2': r2_rf}\n",
+    "\n",
+    "# XGBoost\n",
+    "xgb_model = XGBRegressor()\n",
+    "xgb_model.fit(X_train, y_train)\n",
+    "y_pred_xgb = xgb_model.predict(X_test)\n",
+    "rmse_xgb = np.sqrt(mean_squared_error(y_test, y_pred_xgb))\n",
+    "r2_xgb = r2_score(y_test, y_pred_xgb)\n",
+    "model_results['XGBoost'] = {'RMSE': rmse_xgb, 'R^2': r2_xgb}\n",
+    "\n",
+    "# Step 4: Display Model Results\n",
+    "for model_name, metrics in model_results.items():\n",
+    "    print(f\"{model_name}: RMSE = {metrics['RMSE']}, R^2 = {metrics['R^2']}\")\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "[I 2024-10-07 12:28:39,462] A new study created in memory with name: no-name-56a553fa-d52f-478f-a7bf-473029dcde79\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Optimizing Random Forest...\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "[I 2024-10-07 12:29:38,358] Trial 0 finished with value: -0.014424981676025166 and parameters: {'n_estimators': 254, 'max_depth': 10, 'min_samples_split': 9, 'min_samples_leaf': 2}. Best is trial 0 with value: -0.014424981676025166.\n",
+      "[I 2024-10-07 12:31:32,516] Trial 1 finished with value: -0.03273287443243654 and parameters: {'n_estimators': 500, 'max_depth': 19, 'min_samples_split': 10, 'min_samples_leaf': 3}. Best is trial 0 with value: -0.014424981676025166.\n",
+      "[I 2024-10-07 12:32:38,114] Trial 2 finished with value: -0.013531179723020698 and parameters: {'n_estimators': 286, 'max_depth': 12, 'min_samples_split': 9, 'min_samples_leaf': 2}. Best is trial 2 with value: -0.013531179723020698.\n",
+      "[I 2024-10-07 12:34:29,192] Trial 3 finished with value: -0.004655442846965939 and parameters: {'n_estimators': 486, 'max_depth': 15, 'min_samples_split': 5, 'min_samples_leaf': 1}. Best is trial 3 with value: -0.004655442846965939.\n"
+     ]
+    }
+   ],
+   "source": [
+    "import pandas as pd\n",
+    "import numpy as np\n",
+    "from sklearn.model_selection import train_test_split, cross_val_score\n",
+    "from sklearn.ensemble import RandomForestRegressor\n",
+    "from xgboost import XGBRegressor\n",
+    "from sklearn.metrics import mean_squared_error, r2_score\n",
+    "import optuna\n",
+    "\n",
+    "import warnings\n",
+    "warnings.filterwarnings(\"ignore\")\n",
+    "\n",
+    "# Step 1: Load the Dataset\n",
+    "df = pd.read_excel('data/Coffee Shop Sales.xlsx')\n",
+    "\n",
+    "# Step 2: Data Preprocessing\n",
+    "# Calculate Total Sales as (transaction_qty * unit_price)\n",
+    "df['Total Sales'] = df['transaction_qty'] * df['unit_price']\n",
+    "\n",
+    "# Drop unnecessary columns\n",
+    "df = df.drop(['transaction_id', 'transaction_date', 'transaction_time', 'product_detail'], axis=1)\n",
+    "\n",
+    "# Convert categorical variables into dummy/indicator variables\n",
+    "df = pd.get_dummies(df, drop_first=True)\n",
+    "\n",
+    "# Define feature set X and target y\n",
+    "X = df.drop(['Total Sales'], axis=1)  # Features\n",
+    "y = df['Total Sales']  # Target\n",
+    "\n",
+    "# Split the dataset into training and testing sets\n",
+    "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.2, random_state=42)\n",
+    "\n",
+    "# Step 3: Define the objective functions for Random Forest and XGBoost with Optuna\n",
+    "\n",
+    "def rf_objective(trial):\n",
+    "    \"\"\"Objective function for Random Forest optimization with Optuna.\"\"\"\n",
+    "    # Define hyperparameter search space\n",
+    "    n_estimators = trial.suggest_int('n_estimators', 50, 500)\n",
+    "    max_depth = trial.suggest_int('max_depth', 5, 20)\n",
+    "    min_samples_split = trial.suggest_int('min_samples_split', 2, 10)\n",
+    "    min_samples_leaf = trial.suggest_int('min_samples_leaf', 1, 4)\n",
+    "    \n",
+    "    rf = RandomForestRegressor(\n",
+    "        n_estimators=n_estimators,\n",
+    "        max_depth=max_depth,\n",
+    "        min_samples_split=min_samples_split,\n",
+    "        min_samples_leaf=min_samples_leaf,\n",
+    "        random_state=42\n",
+    "    )\n",
+    "    \n",
+    "    # Cross-validation\n",
+    "    cv_scores = cross_val_score(rf, X_train, y_train, cv=5, scoring='neg_mean_squared_error')\n",
+    "    return np.mean(cv_scores)\n",
+    "\n",
+    "def xgb_objective(trial):\n",
+    "    \"\"\"Objective function for XGBoost optimization with Optuna.\"\"\"\n",
+    "    # Define hyperparameter search space\n",
+    "    n_estimators = trial.suggest_int('n_estimators', 50, 500)\n",
+    "    max_depth = trial.suggest_int('max_depth', 3, 15)\n",
+    "    learning_rate = trial.suggest_float('learning_rate', 0.01, 0.3)\n",
+    "    colsample_bytree = trial.suggest_float('colsample_bytree', 0.3, 1.0)\n",
+    "    \n",
+    "    xgb = XGBRegressor(\n",
+    "        n_estimators=n_estimators,\n",
+    "        max_depth=max_depth,\n",
+    "        learning_rate=learning_rate,\n",
+    "        colsample_bytree=colsample_bytree,\n",
+    "        random_state=42\n",
+    "    )\n",
+    "    \n",
+    "    # Cross-validation\n",
+    "    cv_scores = cross_val_score(xgb, X_train, y_train, cv=5, scoring='neg_mean_squared_error')\n",
+    "    return np.mean(cv_scores)\n",
+    "\n",
+    "# Step 4: Optimize Random Forest\n",
+    "print(\"Optimizing Random Forest...\")\n",
+    "rf_study = optuna.create_study(direction='maximize')\n",
+    "rf_study.optimize(rf_objective, n_trials=50)\n",
+    "\n",
+    "# Step 5: Optimize XGBoost\n",
+    "print(\"Optimizing XGBoost...\")\n",
+    "xgb_study = optuna.create_study(direction='maximize')\n",
+    "xgb_study.optimize(xgb_objective, n_trials=50)\n",
+    "\n",
+    "# Step 6: Train the best models using the optimized hyperparameters\n",
+    "\n",
+    "# Random Forest\n",
+    "best_rf_params = rf_study.best_params\n",
+    "print(\"Best Random Forest Params: \", best_rf_params)\n",
+    "rf_model = RandomForestRegressor(**best_rf_params, random_state=42)\n",
+    "rf_model.fit(X_train, y_train)\n",
+    "y_pred_rf = rf_model.predict(X_test)\n",
+    "\n",
+    "# XGBoost\n",
+    "best_xgb_params = xgb_study.best_params\n",
+    "print(\"Best XGBoost Params: \", best_xgb_params)\n",
+    "xgb_model = XGBRegressor(**best_xgb_params, random_state=42)\n",
+    "xgb_model.fit(X_train, y_train)\n",
+    "y_pred_xgb = xgb_model.predict(X_test)\n",
+    "\n",
+    "# Step 7: Evaluate the models with the optimized parameters\n",
+    "print(\"\\nModel Performance After Optimization:\\n\")\n",
+    "\n",
+    "# Random Forest\n",
+    "rmse_rf = np.sqrt(mean_squared_error(y_test, y_pred_rf))\n",
+    "r2_rf = r2_score(y_test, y_pred_rf)\n",
+    "print(f\"Random Forest - RMSE: {rmse_rf}, R²: {r2_rf}\")\n",
+    "\n",
+    "# XGBoost\n",
+    "rmse_xgb = np.sqrt(mean_squared_error(y_test, y_pred_xgb))\n",
+    "r2_xgb = r2_score(y_test, y_pred_xgb)\n",
+    "print(f\"XGBoost - RMSE: {rmse_xgb}, R²: {r2_xgb}\")\n"
    ]
   },
   {
