--- a/modelling.ipynb
+++ b/modelling.ipynb
@@ -90,24 +90,283 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 16,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['Lower Manhattan' \"Hell's Kitchen\" 'Astoria']\n",
+      "['Coffee' 'Tea' 'Drinking Chocolate' 'Bakery' 'Flavours' 'Loose Tea'\n",
+      " 'Coffee beans' 'Packaged Chocolate' 'Branded']\n",
+      "['Gourmet brewed coffee' 'Brewed Chai tea' 'Hot chocolate' 'Drip coffee'\n",
+      " 'Scone' 'Barista Espresso' 'Brewed Black tea' 'Brewed Green tea'\n",
+      " 'Brewed herbal tea' 'Biscotti' 'Pastry' 'Organic brewed coffee'\n",
+      " 'Premium brewed coffee' 'Regular syrup' 'Herbal tea' 'Gourmet Beans'\n",
+      " 'Organic Beans' 'Sugar free syrup' 'Drinking Chocolate' 'Premium Beans'\n",
+      " 'Chai tea' 'Green beans' 'Espresso Beans' 'Green tea' 'Organic Chocolate'\n",
+      " 'Housewares' 'Black tea' 'House blend Beans' 'Clothing']\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>transaction_id</th>\n",
+       "      <th>transaction_date</th>\n",
+       "      <th>transaction_time</th>\n",
+       "      <th>transaction_qty</th>\n",
+       "      <th>store_id</th>\n",
+       "      <th>store_location</th>\n",
+       "      <th>product_id</th>\n",
+       "      <th>unit_price</th>\n",
+       "      <th>product_category</th>\n",
+       "      <th>product_type</th>\n",
+       "      <th>product_detail</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>1</td>\n",
+       "      <td>2023-01-01</td>\n",
+       "      <td>07:06:11</td>\n",
+       "      <td>2</td>\n",
+       "      <td>5</td>\n",
+       "      <td>Lower Manhattan</td>\n",
+       "      <td>32</td>\n",
+       "      <td>3.00</td>\n",
+       "      <td>Coffee</td>\n",
+       "      <td>Gourmet brewed coffee</td>\n",
+       "      <td>Ethiopia Rg</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>2</td>\n",
+       "      <td>2023-01-01</td>\n",
+       "      <td>07:08:56</td>\n",
+       "      <td>2</td>\n",
+       "      <td>5</td>\n",
+       "      <td>Lower Manhattan</td>\n",
+       "      <td>57</td>\n",
+       "      <td>3.10</td>\n",
+       "      <td>Tea</td>\n",
+       "      <td>Brewed Chai tea</td>\n",
+       "      <td>Spicy Eye Opener Chai Lg</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>3</td>\n",
+       "      <td>2023-01-01</td>\n",
+       "      <td>07:14:04</td>\n",
+       "      <td>2</td>\n",
+       "      <td>5</td>\n",
+       "      <td>Lower Manhattan</td>\n",
+       "      <td>59</td>\n",
+       "      <td>4.50</td>\n",
+       "      <td>Drinking Chocolate</td>\n",
+       "      <td>Hot chocolate</td>\n",
+       "      <td>Dark chocolate Lg</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>4</td>\n",
+       "      <td>2023-01-01</td>\n",
+       "      <td>07:20:24</td>\n",
+       "      <td>1</td>\n",
+       "      <td>5</td>\n",
+       "      <td>Lower Manhattan</td>\n",
+       "      <td>22</td>\n",
+       "      <td>2.00</td>\n",
+       "      <td>Coffee</td>\n",
+       "      <td>Drip coffee</td>\n",
+       "      <td>Our Old Time Diner Blend Sm</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>5</td>\n",
+       "      <td>2023-01-01</td>\n",
+       "      <td>07:22:41</td>\n",
+       "      <td>2</td>\n",
+       "      <td>5</td>\n",
+       "      <td>Lower Manhattan</td>\n",
+       "      <td>57</td>\n",
+       "      <td>3.10</td>\n",
+       "      <td>Tea</td>\n",
+       "      <td>Brewed Chai tea</td>\n",
+       "      <td>Spicy Eye Opener Chai Lg</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>149111</th>\n",
+       "      <td>149452</td>\n",
+       "      <td>2023-06-30</td>\n",
+       "      <td>20:18:41</td>\n",
+       "      <td>2</td>\n",
+       "      <td>8</td>\n",
+       "      <td>Hell's Kitchen</td>\n",
+       "      <td>44</td>\n",
+       "      <td>2.50</td>\n",
+       "      <td>Tea</td>\n",
+       "      <td>Brewed herbal tea</td>\n",
+       "      <td>Peppermint Rg</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>149112</th>\n",
+       "      <td>149453</td>\n",
+       "      <td>2023-06-30</td>\n",
+       "      <td>20:25:10</td>\n",
+       "      <td>2</td>\n",
+       "      <td>8</td>\n",
+       "      <td>Hell's Kitchen</td>\n",
+       "      <td>49</td>\n",
+       "      <td>3.00</td>\n",
+       "      <td>Tea</td>\n",
+       "      <td>Brewed Black tea</td>\n",
+       "      <td>English Breakfast Lg</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>149113</th>\n",
+       "      <td>149454</td>\n",
+       "      <td>2023-06-30</td>\n",
+       "      <td>20:31:34</td>\n",
+       "      <td>1</td>\n",
+       "      <td>8</td>\n",
+       "      <td>Hell's Kitchen</td>\n",
+       "      <td>45</td>\n",
+       "      <td>3.00</td>\n",
+       "      <td>Tea</td>\n",
+       "      <td>Brewed herbal tea</td>\n",
+       "      <td>Peppermint Lg</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>149114</th>\n",
+       "      <td>149455</td>\n",
+       "      <td>2023-06-30</td>\n",
+       "      <td>20:57:19</td>\n",
+       "      <td>1</td>\n",
+       "      <td>8</td>\n",
+       "      <td>Hell's Kitchen</td>\n",
+       "      <td>40</td>\n",
+       "      <td>3.75</td>\n",
+       "      <td>Coffee</td>\n",
+       "      <td>Barista Espresso</td>\n",
+       "      <td>Cappuccino</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>149115</th>\n",
+       "      <td>149456</td>\n",
+       "      <td>2023-06-30</td>\n",
+       "      <td>20:57:19</td>\n",
+       "      <td>2</td>\n",
+       "      <td>8</td>\n",
+       "      <td>Hell's Kitchen</td>\n",
+       "      <td>64</td>\n",
+       "      <td>0.80</td>\n",
+       "      <td>Flavours</td>\n",
+       "      <td>Regular syrup</td>\n",
+       "      <td>Hazelnut syrup</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>149116 rows × 11 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "        transaction_id transaction_date transaction_time  transaction_qty  \\\n",
+       "0                    1       2023-01-01         07:06:11                2   \n",
+       "1                    2       2023-01-01         07:08:56                2   \n",
+       "2                    3       2023-01-01         07:14:04                2   \n",
+       "3                    4       2023-01-01         07:20:24                1   \n",
+       "4                    5       2023-01-01         07:22:41                2   \n",
+       "...                ...              ...              ...              ...   \n",
+       "149111          149452       2023-06-30         20:18:41                2   \n",
+       "149112          149453       2023-06-30         20:25:10                2   \n",
+       "149113          149454       2023-06-30         20:31:34                1   \n",
+       "149114          149455       2023-06-30         20:57:19                1   \n",
+       "149115          149456       2023-06-30         20:57:19                2   \n",
+       "\n",
+       "        store_id   store_location  product_id  unit_price    product_category  \\\n",
+       "0              5  Lower Manhattan          32        3.00              Coffee   \n",
+       "1              5  Lower Manhattan          57        3.10                 Tea   \n",
+       "2              5  Lower Manhattan          59        4.50  Drinking Chocolate   \n",
+       "3              5  Lower Manhattan          22        2.00              Coffee   \n",
+       "4              5  Lower Manhattan          57        3.10                 Tea   \n",
+       "...          ...              ...         ...         ...                 ...   \n",
+       "149111         8   Hell's Kitchen          44        2.50                 Tea   \n",
+       "149112         8   Hell's Kitchen          49        3.00                 Tea   \n",
+       "149113         8   Hell's Kitchen          45        3.00                 Tea   \n",
+       "149114         8   Hell's Kitchen          40        3.75              Coffee   \n",
+       "149115         8   Hell's Kitchen          64        0.80            Flavours   \n",
+       "\n",
+       "                 product_type               product_detail  \n",
+       "0       Gourmet brewed coffee                  Ethiopia Rg  \n",
+       "1             Brewed Chai tea     Spicy Eye Opener Chai Lg  \n",
+       "2               Hot chocolate            Dark chocolate Lg  \n",
+       "3                 Drip coffee  Our Old Time Diner Blend Sm  \n",
+       "4             Brewed Chai tea     Spicy Eye Opener Chai Lg  \n",
+       "...                       ...                          ...  \n",
+       "149111      Brewed herbal tea                Peppermint Rg  \n",
+       "149112       Brewed Black tea         English Breakfast Lg  \n",
+       "149113      Brewed herbal tea                Peppermint Lg  \n",
+       "149114       Barista Espresso                   Cappuccino  \n",
+       "149115          Regular syrup               Hazelnut syrup  \n",
+       "\n",
+       "[149116 rows x 11 columns]"
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# import pandas as pd\n",
-    "# import numpy as np\n",
-    "# from sklearn.model_selection import train_test_split\n",
-    "# from sklearn.linear_model import LinearRegression\n",
-    "# from sklearn.tree import DecisionTreeRegressor\n",
-    "# from sklearn.ensemble import RandomForestRegressor\n",
-    "# from xgboost import XGBRegressor\n",
-    "# from sklearn.metrics import mean_squared_error, r2_score\n",
+    "import pandas as pd\n",
+    "import numpy as np\n",
+    "from sklearn.model_selection import train_test_split\n",
+    "from sklearn.linear_model import LinearRegression\n",
+    "from sklearn.tree import DecisionTreeRegressor\n",
+    "from sklearn.ensemble import RandomForestRegressor\n",
+    "from xgboost import XGBRegressor\n",
+    "from sklearn.metrics import mean_squared_error, r2_score\n",
     "\n",
-    "# # Step 1: Load the Dataset\n",
-    "# df = pd.read_excel('data/Coffee Shop Sales.xlsx')\n",
-    "# print(df['store_location'].unique())\n",
-    "# print(df['product_category'].unique())\n",
-    "# df"
+    "# Step 1: Load the Dataset\n",
+    "df = pd.read_excel('data/Coffee Shop Sales.xlsx')\n",
+    "print(df['store_location'].unique())\n",
+    "print(df['product_category'].unique())\n",
+    "print(df['product_type'].unique())\n",
+    "df"
    ]
   },
   {
@@ -625,17 +884,162 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 21,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "XGBoost RMSE: 0.0001283576835521317\n",
+      "XGBoost R^2: 0.9999999981979373\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/Users/ismatsamadov/Sales_Forecasting/.venv/lib/python3.12/site-packages/sklearn/metrics/_regression.py:492: FutureWarning: 'squared' is deprecated in version 1.4 and will be removed in 1.6. To calculate the root mean squared error, use the function'root_mean_squared_error'.\n",
+      "  warnings.warn(\n"
+     ]
+    }
+   ],
+   "source": [
+    "import pandas as pd\n",
+    "from xgboost import XGBRegressor\n",
+    "from sklearn.model_selection import train_test_split\n",
+    "from sklearn.metrics import mean_squared_error, r2_score\n",
+    "import joblib\n",
+    "\n",
+    "# Step 1: Load the Dataset and Preprocess\n",
+    "df = pd.read_excel('data/Coffee Shop Sales.xlsx')\n",
+    "\n",
+    "# Extract year and month from 'transaction_date'\n",
+    "df['transaction_date'] = pd.to_datetime(df['transaction_date'])\n",
+    "df['year'] = df['transaction_date'].dt.year\n",
+    "df['month'] = df['transaction_date'].dt.month\n",
+    "\n",
+    "# Calculate total sales\n",
+    "df['Total Sales'] = df['transaction_qty'] * df['unit_price']\n",
+    "\n",
+    "# Drop unnecessary columns, including 'Total Sales' from features\n",
+    "df = df.drop(['transaction_id', 'transaction_time', 'transaction_date', 'product_detail'], axis=1)\n",
+    "\n",
+    "# One-Hot Encode categorical variables\n",
+    "df = pd.get_dummies(df, columns=['store_location', 'product_category', 'product_type'], drop_first=True)\n",
+    "\n",
+    "# Save the feature columns for later use\n",
+    "joblib.dump(df.columns, 'columns.pkl')\n",
+    "\n",
+    "# Define feature set X (excluding 'Total Sales') and target y\n",
+    "X = df.drop(['Total Sales'], axis=1)  # Features\n",
+    "y = df['Total Sales']  # Target variable\n",
+    "\n",
+    "# Step 2: Train-Test Split\n",
+    "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.2, random_state=42)\n",
+    "\n",
+    "# Step 3: Train the Model\n",
+    "xgb_model = XGBRegressor()\n",
+    "xgb_model.fit(X_train, y_train)\n",
+    "\n",
+    "# Save the trained model\n",
+    "joblib.dump(xgb_model, 'xgb_coffee_sales_model.joblib')\n",
+    "\n",
+    "# Step 4: Evaluate the Model\n",
+    "y_pred_xgb = xgb_model.predict(X_test)\n",
+    "rmse_xgb = mean_squared_error(y_test, y_pred_xgb, squared=False)\n",
+    "r2_xgb = r2_score(y_test, y_pred_xgb)\n",
+    "\n",
+    "print(f\"XGBoost RMSE: {rmse_xgb}\")\n",
+    "print(f\"XGBoost R^2: {r2_xgb}\")\n"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 22,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Predicted Sales for Lower Manhattan in 2024-1: 3.297071933746338\n"
+     ]
+    }
+   ],
+   "source": [
+    "import pandas as pd\n",
+    "import joblib\n",
+    "\n",
+    "# Load the trained model and feature columns\n",
+    "xgb_model = joblib.load('xgb_coffee_sales_model.joblib')\n",
+    "columns = joblib.load('columns.pkl')\n",
+    "\n",
+    "# Example input for Lower Manhattan in January 2024\n",
+    "example_input = {\n",
+    "    'year': [2024],\n",
+    "    'month': [1],\n",
+    "    \"store_location_Hell's Kitchen\": [0],\n",
+    "    'store_location_Lower Manhattan': [1],\n",
+    "    'product_category_Coffee': [1],\n",
+    "    'product_category_Tea': [0],\n",
+    "    'product_category_Drinking Chocolate': [0],\n",
+    "    'product_category_Bakery': [0],\n",
+    "    'product_category_Flavours': [0],\n",
+    "    'product_category_Loose Tea': [0],\n",
+    "    'product_category_Coffee beans': [0],\n",
+    "    'product_category_Packaged Chocolate': [0],\n",
+    "    'product_category_Branded': [0],\n",
+    "    'product_type_Biscotti': [0],\n",
+    "    'product_type_Black tea': [0],\n",
+    "    'product_type_Brewed Black tea': [0],\n",
+    "    'product_type_Brewed Chai tea': [0],\n",
+    "    'product_type_Brewed Green tea': [0],\n",
+    "    'product_type_Brewed herbal tea': [0],\n",
+    "    'product_type_Chai tea': [0],\n",
+    "    'product_type_Clothing': [0],\n",
+    "    'product_type_Drinking Chocolate': [0],\n",
+    "    'product_type_Drip coffee': [0],\n",
+    "    'product_type_Espresso Beans': [0],\n",
+    "    'product_type_Gourmet Beans': [0],\n",
+    "    'product_type_Gourmet brewed coffee': [0],\n",
+    "    'product_type_Green beans': [0],\n",
+    "    'product_type_Green tea': [0],\n",
+    "    'product_type_Herbal tea': [0],\n",
+    "    'product_type_Hot chocolate': [0],\n",
+    "    'product_type_House blend Beans': [0],\n",
+    "    'product_type_Housewares': [0],\n",
+    "    'product_type_Organic Beans': [0],\n",
+    "    'product_type_Organic Chocolate': [0],\n",
+    "    'product_type_Organic brewed coffee': [0],\n",
+    "    'product_type_Pastry': [0],\n",
+    "    'product_type_Premium Beans': [0],\n",
+    "    'product_type_Premium brewed coffee': [0],\n",
+    "    'product_type_Regular syrup': [0],\n",
+    "    'product_type_Scone': [0],\n",
+    "    'product_type_Sugar free syrup': [0]\n",
+    "}\n",
+    "\n",
+    "# Convert input to DataFrame\n",
+    "example_input_df = pd.DataFrame(example_input)\n",
+    "\n",
+    "# Ensure all necessary columns are present\n",
+    "for col in columns:\n",
+    "    if col not in example_input_df.columns:\n",
+    "        example_input_df[col] = 0\n",
+    "\n",
+    "# Reorder columns to match the trained model\n",
+    "example_input_df = example_input_df[columns]\n",
+    "\n",
+    "# Ensure 'Total Sales' is not in the prediction input\n",
+    "if 'Total Sales' in example_input_df.columns:\n",
+    "    example_input_df = example_input_df.drop('Total Sales', axis=1)\n",
+    "\n",
+    "# Make prediction\n",
+    "predicted_sales = xgb_model.predict(example_input_df)\n",
+    "\n",
+    "print(f\"Predicted Sales for Lower Manhattan in 2024-1: {predicted_sales[0]}\")\n"
+   ]
   },
   {
    "cell_type": "code",
